# project_a

./: .buildconfig  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  Rocket.toml  TODO.md  issues.md  main  main.go  main.go~  main_test.go  readme.md
core/: Cargo.toml
core-lib/: Cargo.toml
core-lib/src/: jwt.rs  lib.rs
core/src/: email.rs  error.rs  jwt.rs  lib.rs  password.rs  prelude.rs  storage.rs  user.rs
core/src/user/: login.rs  mod.rs  password.rs  user.rs
core/src/user/model/: mod.rs  user_v1.rs
core/tests/: test_user_storage.rs
docs/development/: data management.md
src/: main.rs  tests.rs
templates/: about.hbs  base.html  footer.hbs  footer.html  layout2.hbs  nav.hbs  navbar.html
user/: user.go  user_test.go
website/: Cargo.toml  Rocket.toml
website/src/: lib.rs  main.rs  tests.rs
website/templates/: about.hbs  footer.hbs  index.hbs  layout.hbs  login.hbs  logout.hbs  nav.hbs  user.hbs
