[package]
name = "core_lib"
version = "0.0.1"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPLv2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bcrypt = "*"
rand = "*"
lettre = "*"
lettre_email = "*"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"